z-index fixes

--- a/less/modules/base.less
+++ b/less/modules/base.less
@@ -37,7 +37,7 @@ menu {
 }
 
 .lightbox {
-	z-index: 10;
+	z-index: 9998;
 	display: block;
 	position: fixed;
 	top: -250px;
