--- a/less/plugins/tooltip.less
+++ b/less/plugins/tooltip.less
@@ -9,7 +9,7 @@
         bottom: 100%;
         left: 50%;
         pointer-events: none;
-        z-index: 9999;
+        z-index: 999;
         -webkit-backface-visibility: hidden;
         font-size: 14px;
 
